--- a/tag1_structure.html
+++ b/tag1_structure.html
@@ -9,7 +9,8 @@
     <h1>Today is <span onclick="this.innerHTML='Sunday'">Wednesday</span></h1>
     <h2>Heading <span onclick="this.innerHTML=5">2</span></h2>
     <h3>Head<span onclick="this.innerHTML='er'">ing</span> 3</h3>
-    <h4>H<span onclick="this.innerHTML='ar'">ea</span>ding file   <h5>Heading <span onclick="this.innerHTML=2">5</span></h5>
+    <h4>H<span onclick="this.innerHTML='ar'">ea</span>ding 4</h4>   
+    <h5>Heading <span onclick="this.innerHTML=2">5</span></h5>
     <h6>Hea<span onclick="this.innerHTML='t'">d</span>ing 6</h6>
     <p>Para<span onclick="this.innerHTML='chute'">graph</span></p>
     <div>ssssssa
