--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+cd <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,17 @@
 </head>
 <body>
    <span>hello world</span>
-   <div></div>
+  <!-- cd /c/_a/pq...</li>
+       git add -A</li>
+       git commit -m "any message you want to save to history"
+       git push -->
    <ul>
        <li>Ho ho ho!</li>
        <li><ol><li>lllllll</li><li>llllll</li></ol></li>
    </ul>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/bq22rv5mKhg" frameborder="0" allowfullscreen></iframe>
 </body>
 <foot>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/bq22rv5mKhg" frameborder="0" allowfullscreen></iframe>
+     
 </foot>
 </html>
