--- a/tag4_link.html
+++ b/tag4_link.html
@@ -14,7 +14,7 @@
     <br>
     <a target="_blank" href="http://www.google.com">Google (window)</a>
     <a href="#minskottein">Go to bottom</a>
-    <a href="mailto:jakezhao100.2@gmail.com">EMAIL!!!</a>
+    <a href="mailto:jakezhao100.2@gmail.com">EMAIL!!! (may not work for some people</a>
     <div id="minskottein">mmmmmmmmmmmmmmmmmmmmmmmm <br>
         <a href="#rembelei">Back to top</a>
     </div> 
