--- a/assignment/t/assignment3.html/about_school.html
+++ b/assignment/t/assignment3.html/about_school.html
@@ -12,7 +12,7 @@
     <br>
     Fax: 519-452-8429
     <br>
-    Email: <a href="mailto:northbrae@tvdsb.on.ca"></a>
+    Email: <a href="mailto:northbrae@tvdsb.on.ca">northbrae@tvdsb.on.ca</a>
     <br>
     <br>
     <dl>
