--- a/assignment/t/assignment2.html/favorite_food.html
+++ b/assignment/t/assignment2.html/favorite_food.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <strong>Note:</strong> I do not have a favorite food, but one that I like is <a href="#pizza">pizza.</a>
-    <div id="pizza" hidden="hidden">It might be my favorite food...</div>
+    <div id="pizza"></div>
     <h2>History</h2>
     <p>People hs been baking pizza from sometime ago, but pizza as we know it today began <span onclick="this.innerHTML='in the 1300s.'">much l4ter...</span></p>
     <p>At that time, King Margarita of Italy made a pizza with tomato sauce and mozzarella.</p>
