--- a/assignment/t/assignment4.html/order.html
+++ b/assignment/t/assignment4.html/order.html
@@ -39,14 +39,14 @@
             <input type="checkbox" name="l" id="j"> <label for="j"><img src="../../../img/pizza.jpg" alt="Pizza" width="100"></label>
             <input type="checkbox" name="l" id="r"> <label for="r"><img src="../../../img/soup.jpg" alt="Soup" width="100"></label>
             <br>
-            <label for="people">People (1-6):</label>
+            <label for="people">People (1-6):</label>e
             <input type="range" min=1 max=6>
             <br>
             <label for="date">Date:</label>
             <input type="number" placeholder="mmddyyyy">
             <br>
             <label for="time">Time:</label>
-            <input type="number" id="time" placeholder="hh:mm"> 
+            <input type="number" id="time" placeholder="hh" min=0 max=23> : <input type="number" id="time" placeholder="mm" min=0 max=59>
             <select name="xxxx" id="time">
                 <option value="AM">AM</option>
                 <option value="PM">PM</option>
