--- a/assignment/t/assignment4.html/order.html
+++ b/assignment/t/assignment4.html/order.html
@@ -16,7 +16,7 @@
             </datalist>
             <br>
             <label for="name">Name:</label>
-            <input id="name" type="text" placeholder="Enter your full name">
+            <input id="name" type="text" placeholder="Enter your full name" required>
             <label for="phone">Phone:</label>
             <div id="phone">
                 <label for="phone">Phone:</label>
