--- a/tag7_form2.html
+++ b/tag7_form2.html
@@ -12,10 +12,17 @@
     <input type="email">
     <input type="tel">
     <input type="range">
+    <input type="search">
     <input type="color">
     <input type="file">
     <input type="radio">
     <input type="checkbox">
     <input type="text" placeholder="1">
+    
+    <input type="date">
+    <input type="time">
+    <input type="datetime-local">
+    <input type="month">
+    <input type="week">
 </body>
 </html>
