--- a/assignment/t/assignment5.html/colors.html
+++ b/assignment/t/assignment5.html/colors.html
@@ -25,16 +25,25 @@
         span.opacity {
             opacity: 0.5;
         }
+        p#hslint {
+            color:hsl(120,100%,60%);
+            background-color: hsl(50,90%,40%)
+        }
     </style>
 </head>
 <body>
-    <span id="rgb">eeeee</span>
-    <span id="rgba">eeeee</span>
-    <span id="hsl">eeeee</span>
-    <span id="hsla">eeeee</span>
-    <span id="name">eeeee</span>
-    <span id="hex">eeeee</span>
-    <span id="name" class="opacity">eeeee</span>
-    <span id="hex" class="opacity">eeeee</span>
+    <span id="rgb">eeeee</span> <!-- rgb -->
+    <span id="rgba">eeeee</span> <!-- rgba -->
+    <span id="hsl">eeeee</span> <!-- hsl -->
+    <span id="hsla">eeeee</span> <!-- hsla -->
+    <span id="name">eeeee</span> <!-- name -->
+    <span id="hex">eeeee</span> <!-- hex -->
+    <span id="name" class="opacity">eeeee</span> <!-- namea -->
+    <span id="hex" class="opacity">eeeee</span> <!-- hexa -->
+    <br>
+    <br>
+    <label for="hslint">HSL Example:</label>
+    <p id="hslint">Text color and background color is made in HSL</p>
+
 </body>
 </html>
