--- a/index.html
+++ b/index.html
@@ -1,28 +1,12 @@
-cd <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <style>
-        body {
-            background-color:fuchsia;
-            color:darkslategray;
-        }
-    </style>
+    <title>Lost in mountains....</title>
+    
 </head>
 <body>
-   <span>hello world</span>
-  <!-- cd /c/_a/pq...</li>
-       git add -A</li>
-       git commit -m "any message you want to save to history"
-       git push -->
-   <ul>
-       <li>Ho ho ho!</li>
-       <li><ol><li>lllllll</li><li>llllll</li></ol></li>
-   </ul>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/bq22rv5mKhg" frameborder="0" allowfullscreen></iframe>
+    <p>You had explored the world and you got lost in mountains. What will you do next?</p>
+    <a href="first.html">Go to my first area (history)</a>
 </body>
-<foot>
-     
-</foot>
 </html>
