--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Lost in mountains....</title>
-    
+    <style>
+        body {
+            background-image: url(https://c402277.ssl.cf1.rackcdn.com/photos/2325/images/hero_small/mountains-hero.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <p>You had explored the world and you got lost in mountains. What will you do next?</p>
     <a href="first.html">Go to my first area (history)</a>
+    <a href="index2.html">Go to the forest</a>
+    <a href="desert.html">Go north</a>
 </body>
 </html>
