--- a/css/c007-layout.html/g02-layout-by-inlineblock.html
+++ b/css/c007-layout.html/g02-layout-by-inlineblock.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <title>q===p</title>
     <style>
+        section, nav {
+            display: inline-block;
+        }
         nav {
-            float:left;
+            width: 20%;
         }
         section {
-            float: right;
-            width: 31.415926%;
-        }
-        * {
-            border: solid red 5px;
+            width: 70%
         }
     </style>
 </head>
