--- a/css_animation/02transform/2d/transformall.html
+++ b/css_animation/02transform/2d/transformall.html
@@ -17,7 +17,7 @@
 		}
 		body:hover div {
 		
-			transform: scale(1.5) rotate(90deg) translateX(100px) skewX(2k0deg);
+			transform: scale(1.5) rotate(90deg) translateX(100px) skewX(20deg);
 		}
 	</style>
 </head>
