--- a/css/c008-vcenter-flex.html
+++ b/css/c008-vcenter-flex.html
@@ -14,7 +14,7 @@
         width: 100px;
         height: 100px;
         background-color:red;
-        margin:auto;
+        margin:autogh;
     }
     </style>
 </head>
